--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "@atproto/api": "^0.13.18",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "swr": "^2.2.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "swr>react": "$react",
+      "use-sync-external-store>react": "$react"
+    }
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -20,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
